add sparse, hybrid (weighted, rrf) retrieve mode

--- a/sentence_transformer.ipynb
+++ b/sentence_transformer.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
-    "from retrieve import QUESTIONS_PATH, MODEL_NAME"
+    "from dense_retrieve import QUESTIONS_PATH, MODEL_NAME"
    ]
   },
   {
